# empirical-ai

./: .env.example  .gitignore  AGENTS.md  README.md  config.toml  project.md  pyproject.toml  test_llm.py
challenge/: challenge.md
challenge/scripts/titanic/: titanic.py
docker/: Dockerfile
examples/: candidate_main.py
kaggle_ts/: cli.py  config.py  config_loader.py
kaggle_ts/agents/: base.py  prompting.py  sandbox_docker.py  sandbox_local.py  scorer_local.py  stubs.py  validation.py
kaggle_ts/analysis/: embeddings.py
kaggle_ts/core/: controller.py  types.py
kaggle_ts/orchestrator/: loop.py
kaggle_ts/persistence/: jsonl.py
kaggle_ts/providers/: __init__.py  gemini.py
kaggle_ts/research/: ideas.py  recombine.py
kaggle_ts/utils/: manual_eval.py  split_val.py
spec/: components.md  project.md  system_spec.md
