[project]
name = "kaggle-ts"
version = "0.1.0"
description = "Flat PUCT orchestrator for iterative code generation (stubbed)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "Empirical AI" }]
dependencies = [
    "google-genai>=1.36.0",
    "pandas>=2.3.2",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.2",
]

[project.scripts]
kaggle-ts = "kaggle_ts.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
gemini = ["google-genai>=0.3.0"]

[tool.setuptools.packages.find]
include = ["kaggle_ts*"]
exclude = [
  "runs*",
  "docker*",
  "challenge*",
  "spec*",
]
